# theory-machine

./: .gitignore  CMakeLists.txt  README.md
data/: input.txt  output.txt
src/: CMakeLists.txt  main.cpp
